--- a/src/main/resources/static/web/assets/pages/creams.html
+++ b/src/main/resources/static/web/assets/pages/creams.html
@@ -245,7 +245,7 @@
                     Fresheners</a>
             </div>
             <div class="d-flex containerSerchAndCard">
-                <div class="d-flex flex-column gap-5 containerSearchMe" style="width: 20%; margin-top: 2rem; padding-left: 1rem;">
+                <div class="d-flex flex-column gap-5 containerSearchMe" style="width: 30rem; margin-top: 2rem; padding-left: 1rem;">
                     <div class="d-flex flex-column">
                         <h6 class="form-label mx-2">Price:</h6>
                         <div class="form-check" v-for="range in ranges" :key="range">
@@ -268,7 +268,7 @@
                     </div>
 
                     <a @click="filterByPriceAndType" class="btn"
-                        style="background-color:#020305; color:#ffffff;">Search</a>
+                        style="background-color:#020305; color:#ffffff; width: 8rem">Search</a>
                 </div>
                 <div class="d-flex flex-wrap justify-content-around" style="margin-top: 1rem;">
                     <div class="card container-img-body m-3" v-for="cream of creams" style="width: 20rem;"
@@ -284,8 +284,7 @@
                         <img :src="cream.image" class="card-img-top card-image-me"
                             style="height: 15rem; object-fit: contain;">
                         <div class="card-body">
-                            <h5 class="card-title" style="text-align: center;">{{cream.name}}</h5>
-                            <h5 class="card-title" style="text-align: center;"> ({{cream.content}}ml)</h5>
+                            <h5 class="card-title" style="text-align: center; min-height: 3rem;">{{cream.name}} ({{cream.content}}ml)</h5>
                             <h5 style="color: #ec225e; text-align: center;">US$ {{formatNumber(cream.price)}}</h5>
                             <p
                                 style="text-align: center; white-space: pre-line; overflow: hidden; text-overflow: ellipsis; -webkit-line-clamp: 2; -webkit-box-orient: vertical; display: -webkit-box;">
@@ -324,19 +323,18 @@
                                 href="#"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
-                    <div class="d-flex justify-content-between" style="gap: 1rem;">
+                    <div class="d-flex justify-content-around flex-wrap">
                         <div class="col-lg-3 col-md-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Pages</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="#"><i
-                                        class="fa fa-angle-right mr-2"></i>Products</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About
+                                <a class="text-white-50 mb-2" href="./fragances.html"><i
+                                        class="fa fa-angle-right mr-2"></i>Fragances</a>
+                                        <a class="text-white-50 mb-2" href="./air-fresheners.html"><i
+                                            class="fa fa-angle-right mr-2"></i>Air Fresheners</a>
+                                            <a class="text-white-50 mb-2" href="./creams.html"><i
+                                                class="fa fa-angle-right mr-2"></i>Creams</a>
+                                <a class="text-white-50 mb-2" href="../../../index.html#AboutUs"><i class="fa fa-angle-right mr-2"></i>About
                                     Us</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Blog</a>
-                                <a class="text-white-50 mb-2" href="#"><i
-                                        class="fa fa-angle-right mr-2"></i>Testimonial</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Gif
-                                    Cards</a>
                             </div>
                         </div>
                         <div id="Contact" class="col-lg-6 col-md-6 mb-6">
@@ -345,9 +343,9 @@
                             <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
                             <p><i class="fa fa-envelope mr-2"></i>velvetfragances@gmail.com</p>
                         </div>
-                        <iframe
+                        <iframe 
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.543028422734!2d-111.61325043503413!3d35.212922840097946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872d8ed73ade55ed%3A0x69dde6ff2b6b92df!2sThe%20UPS%20Store!5e0!3m2!1ses!2sar!4v1700769820848!5m2!1ses!2sar"
-                            width="200" height="200" style="border:0; border-radius: 1rem;" allowfullscreen=""
+                            width="100%" height="100%" style="border:0; border-radius: 1rem;" allowfullscreen=""
                             loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="iframe"></iframe>
                     </div>
                 </div>
