--- a/src/main/resources/static/web/assets/pages/fragances.html
+++ b/src/main/resources/static/web/assets/pages/fragances.html
@@ -248,7 +248,7 @@
             </div>
 
             <div class="d-flex containerSerchAndCard">
-                <div class="d-flex flex-column gap-5 containerSearchMe" style="width: 20%; margin-top: 2rem; padding-left: 1rem;">
+                <div class="d-flex flex-column gap-5 containerSearchMe" style="width: 30rem; margin-top: 2rem; padding-left: 1rem;">
 
                     <div class="d-flex flex-column">
                         <h6 class="form-label mx-2">Price:</h6>
@@ -271,7 +271,7 @@
                         </div>
                     </div>
                     <a @click="filterByPriceAndGender" class="btn"
-                        style="background-color:#020305; color:#ffffff;">Search</a>
+                        style="background-color:#020305; color:#ffffff; width: 8rem;">Search</a>
                 </div>
                 <div class="d-flex flex-wrap justify-content-around " style="margin-top: 1rem;">
                     <div class="card container-img-body m-3" v-for="fragance of fragances" style="width: 100%; max-width: 20rem;"
@@ -287,9 +287,7 @@
                         <img :src="fragance.image" class="card-img-top card-image-me"
                             style="height: 15rem; object-fit: contain;">
                         <div class="card-body">
-                            <h5 class="card-title" style="text-align: center;">{{fragance.name}}</h5>
-                            <h5 class="card-title" style="text-align: center;">
-                            ({{fragance.content}}ml)</h5>
+                            <h5 class="card-title" style="text-align: center; min-height: 3rem;">{{fragance.name}} ({{fragance.content}}ml)</h5>
                             <h5 style="color: #ec225e; text-align: center;">US$ {{formatNumber(fragance.price)}}</h5>
                             <div>
                                 <h6 class="card-text" style="text-align: center;">Olfactory Family: <span
@@ -319,7 +317,7 @@
                             <img src="../images/logo 2.png" alt="" style="width: 80%;">
                         </a>
                         <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Follow Us</h6>
-                        <div class="d-flex justify-content-start">
+                        <div class="d-flex justify-content-start flex-wrap">
                             <a class="btn btn-square mr-2 button-footer"
                                 style="color: #ec225e; border: solid 1px #ec225e;" href="#"><i
                                     class="fab fa-twitter"></i></a>
